# chaptr

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  chaptr.spec  pyproject.toml  run_chaptr.py
.github/workflows/: release.yml
chaptr/: __init__.py
chaptr/pipeline/: srt_parser.py
chaptr/ui/: __init__.py  __main__.py  app.py  dialogs.py  log_panel.py  main_workspace.py  models.py  workers.py  youtube_mixin.py
chaptr/utils/: __init__.py  compat.py
chaptr_app/: README.md  pubspec.yaml
chaptr_app/lib/: main.dart
docs/: mobile-chapter-app-design.md
docs/design/: flutter-implementation-plan.md  framework-decision.md  multiplatform-redesign.md  ux-evaluation.md
media_scribe_workflow/pipeline/: __init__.py
media_scribe_workflow/ui/: app.py  dialogs.py  main_workspace.py  models.py
media_scribe_workflow/utils/: __init__.py  compat.py
native/chaptr_core/: Cargo.toml  README.md
native/chaptr_core/src/: api.rs  chapter.rs  fft.rs  lib.rs  peaks.rs  stft.rs
poc/web/: README.md  app.js  dsp.js  index.html  player.js  ux.mjs  verify.mjs
tests/: __init__.py  manual_test_checklist.md  test_chapter_manager.py  test_chapter_operations.py  test_core_state.py  test_excluded_regions.py  test_export_manager_ui.py  test_export_orchestrator.py  test_ffmpeg_utils.py  test_log_panel.py  test_main_workspace.py  test_mixins.py  test_models_chapter_info.py  test_project_io.py  test_source_file_manager.py  test_source_loading.py  test_styles.py  test_utils_compat.py  test_video_properties.py  test_waveform_regions.py  test_workers_utils.py  test_youtube_chapter_format.py  test_youtube_mixin.py
tests/fixtures/: lesson_report.tex  pipeline_test.tex  test_project.vce.json  (+1 more)
worklog/: 2026-05-27.md  2026-06-03.md  INDEX.md
(+51 files in other folders)
