[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chaptr"
version = "2.1.34"
description = "動画チャプター編集・書き出しデスクトップアプリ（PySide6 + ffmpeg、GPU エンコード対応）"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "mashi727"}
]
keywords = ["video", "chapter", "editor", "pyside6", "ffmpeg", "desktop", "waveform"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "PySide6>=6.6.0",
    "PyYAML>=6.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "static-ffmpeg>=2.0",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mashi727/chaptr"
Repository = "https://github.com/mashi727/chaptr"

[project.scripts]
chaptr = "chaptr.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["chaptr"]
